--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@remixicon/react": "^4.9.0",
     "next": "16.1.4",
+    "nprogress": "^0.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
